# chat-test

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  justfile  package.json  tailwind.config.js  test_all_pages.py  test_chat.py  test_ui.py
.claude/skills/hub-page/: SKILL.md
crates/app/: Cargo.toml
crates/app/src/: api.rs  app.rs  lib.rs  main.rs
crates/app/src/components/: app_shell.rs  mod.rs  modal.rs  navbar.rs  sidebar.rs  toast.rs
crates/app/src/components/bots/: bot_card.rs  generation_params_editor.rs  mod.rs
crates/app/src/components/chat/: assistant_message.rs  markdown.rs  message_input.rs  message_list.rs  mod.rs  model_selector.rs  user_message.rs
crates/app/src/components/settings/: mod.rs  settings_modal.rs
crates/app/src/context/: auth.rs  conversations.rs  mod.rs  settings.rs
crates/app/src/pages/: bot_editor.rs  bot_store.rs  chat.rs  conversations.rs  home.rs  mod.rs  my_bots.rs  not_found.rs
crates/app/src/pages/admin/: analytics.rs  mod.rs  users.rs
crates/app/src/server/: mod.rs  router.rs  state.rs
crates/app/src/server/handlers/: admin.rs  bots.rs  chat.rs  conversations.rs  mod.rs  profiles.rs  uploads.rs
crates/app/style/: main.scss
crates/auth/: Cargo.toml
crates/auth/src/: config.rs  error.rs  extractor.rs  jwks.rs  lib.rs  verify.rs
crates/bedrock/: Cargo.toml
crates/bedrock/src/: converse.rs  cost.rs  error.rs  lib.rs  models.rs  profiles.rs  stream.rs
crates/db/: Cargo.toml
crates/db/src/: bots.rs  conversations.rs  error.rs  lib.rs  marshaling.rs  profiles.rs  s3.rs
crates/shared/: Cargo.toml
crates/shared/src/: api.rs  bot.rs  conversation.rs  inference_profile.rs  lib.rs  user.rs
infra/: cdk.json  iam-policy.json  package.json  tsconfig.json
infra/lib/: bedrock-rs-stack.ts
style/: main.scss
templates/: Cargo.toml
templates/src/: lib.rs
