[package]
name    = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
shared       = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
chrono       = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
