[package]
name    = "bedrock"
version = "0.1.0"
edition = "2021"

[dependencies]
shared                 = { workspace = true }
aws-config             = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-bedrock        = { workspace = true }
aws-smithy-types       = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
tokio                  = { workspace = true }
tokio-stream           = { workspace = true }
futures                = { workspace = true }
tracing                = { workspace = true }
thiserror              = { workspace = true }
anyhow                 = { workspace = true }
chrono                 = { workspace = true }
uuid                   = { workspace = true }
async-trait            = { workspace = true }
base64                 = { workspace = true }
