[package]
name    = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
shared           = { workspace = true }
bedrock          = { workspace = true }
aws-config       = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3       = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_dynamo     = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
bytes            = { workspace = true }
async-trait      = { workspace = true }
